Applying Java migration aids for Java 21.